# src/app/api/models/image-dto.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ImageDto {
+  description?: null | string;
+  url?: null | string;
+}
