# src/app/api/models/image.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+import { Item } from './item';
+export interface Image {
+  description?: null | string;
+  id?: number;
+  target?: Item;
+  url?: null | string;
+}
