# src/app/api/models/item-dto.ts
@@ -1,9 +1,10 @@
 /* tslint:disable */
 /* eslint-disable */
+import { ImageDto } from './image-dto';
 export interface ItemDto {
   description?: null | string;
   id?: number;
-  image?: null | string;
+  images?: null | Array<ImageDto>;
   name: string;
-  owner?: null | string;
+  owner: string;
 }
