# src/app/api/models/reservation-dto.ts
@@ -1,9 +1,9 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface ReservationDto {
-  end?: string;
+  endTime?: string;
   id?: number;
   owner?: null | string;
-  start?: string;
+  startTime?: string;
   target?: number;
 }
