# swagger.json
@@ -1,8 +1,17 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "Reservation API",
-    "description": "An ASP.NET Core Web API for managing reservations",
+    "title": "Reservation api",
+    "description": "An ASP.NET Core Web API for managing reservations for different items. Items can be reserved for selected timeslots.",
+    "termsOfService": "https://example.com/terms",
+    "contact": {
+      "name": "Example Contact",
+      "url": "https://example.com/contact"
+    },
+    "license": {
+      "name": "Example License",
+      "url": "https://example.com/license"
+    },
     "version": "v1"
   },
   "paths": {
@@ -11,6 +20,7 @@
         "tags": [
           "Items"
         ],
+        "summary": "Gets all the items in the system",
         "responses": {
           "200": {
             "description": "Success",
@@ -72,113 +82,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/Item"
+                  "$ref": "#/components/schemas/ItemDTO"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Item"
+                  "$ref": "#/components/schemas/ItemDTO"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Item"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Items/user/{username}": {
-      "get": {
-        "tags": [
-          "Items"
-        ],
-        "parameters": [
-          {
-            "name": "username",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ItemDTO"
-                  }
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ItemDTO"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ItemDTO"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Items/{query}": {
-      "get": {
-        "tags": [
-          "Items"
-        ],
-        "parameters": [
-          {
-            "name": "query",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ItemDTO"
-                  }
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ItemDTO"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ItemDTO"
-                  }
+                  "$ref": "#/components/schemas/ItemDTO"
                 }
               }
             }
@@ -191,10 +105,12 @@
         "tags": [
           "Items"
         ],
+        "summary": "Gets a single item based on id",
         "parameters": [
           {
             "name": "id",
             "in": "path",
+            "description": "Item id",
             "required": true,
             "schema": {
               "type": "integer",
@@ -204,7 +120,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Success",
+            "description": "Returns an item",
             "content": {
               "text/plain": {
                 "schema": {
@@ -222,6 +138,9 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Item not found"
           }
         }
       },
@@ -282,24 +201,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/Item"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Item"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Item"
-                }
-              }
-            }
+            "description": "Success"
           }
         }
       }
@@ -370,17 +272,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/ReservationDTO"
+                  "$ref": "#/components/schemas/Reservation"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ReservationDTO"
+                  "$ref": "#/components/schemas/Reservation"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ReservationDTO"
+                  "$ref": "#/components/schemas/Reservation"
                 }
               }
             }
@@ -507,17 +409,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/ReservationDTO"
+                  "$ref": "#/components/schemas/Reservation"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ReservationDTO"
+                  "$ref": "#/components/schemas/Reservation"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ReservationDTO"
+                  "$ref": "#/components/schemas/Reservation"
                 }
               }
             }
@@ -581,24 +483,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/Reservation"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Reservation"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Reservation"
-                }
-              }
-            }
+            "description": "Success"
           }
         }
       }
@@ -608,7 +493,6 @@
         "tags": [
           "Users"
         ],
-        "summary": "Gets a list of all users",
         "responses": {
           "200": {
             "description": "Success",
@@ -668,7 +552,7 @@
         },
         "responses": {
           "201": {
-            "description": "Success",
+            "description": "Created",
             "content": {
               "text/plain": {
                 "schema": {
@@ -813,17 +697,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UserDTO"
+                "$ref": "#/components/schemas/User"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/UserDTO"
+                "$ref": "#/components/schemas/User"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/UserDTO"
+                "$ref": "#/components/schemas/User"
               }
             }
           }
@@ -855,10 +739,42 @@
   },
   "components": {
     "schemas": {
+      "Image": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "url": {
+            "type": "string",
+            "nullable": true
+          },
+          "target": {
+            "$ref": "#/components/schemas/Item"
+          }
+        },
+        "additionalProperties": false
+      },
+      "ImageDTO": {
+        "type": "object",
+        "properties": {
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "url": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "Item": {
-        "required": [
-          "name"
-        ],
         "type": "object",
         "properties": {
           "id": {
@@ -866,27 +782,34 @@
             "format": "int64"
           },
           "name": {
-            "maxLength": 50,
-            "minLength": 3,
-            "type": "string"
+            "type": "string",
+            "nullable": true
           },
           "description": {
             "type": "string",
             "nullable": true
           },
-          "image": {
-            "type": "string",
-            "nullable": true
-          },
           "owner": {
             "$ref": "#/components/schemas/User"
+          },
+          "images": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Image"
+            },
+            "nullable": true
+          },
+          "accessCount": {
+            "type": "integer",
+            "format": "int64"
           }
         },
         "additionalProperties": false
       },
       "ItemDTO": {
         "required": [
-          "name"
+          "name",
+          "owner"
         ],
         "type": "object",
         "properties": {
@@ -896,19 +819,22 @@
           },
           "name": {
             "maxLength": 50,
-            "minLength": 3,
+            "minLength": 4,
             "type": "string"
           },
           "description": {
             "type": "string",
             "nullable": true
           },
-          "image": {
-            "type": "string",
-            "nullable": true
-          },
           "owner": {
-            "type": "string",
+            "minLength": 1,
+            "type": "string"
+          },
+          "images": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ImageDTO"
+            },
             "nullable": true
           }
         },
@@ -948,17 +874,17 @@
             "type": "integer",
             "format": "int64"
           },
-          "target": {
-            "$ref": "#/components/schemas/Item"
-          },
           "owner": {
             "$ref": "#/components/schemas/User"
           },
-          "start": {
+          "target": {
+            "$ref": "#/components/schemas/Item"
+          },
+          "startTime": {
             "type": "string",
             "format": "date-time"
           },
-          "end": {
+          "endTime": {
             "type": "string",
             "format": "date-time"
           }
@@ -972,19 +898,19 @@
             "type": "integer",
             "format": "int64"
           },
-          "target": {
-            "type": "integer",
-            "format": "int64"
-          },
           "owner": {
             "type": "string",
             "nullable": true
           },
-          "start": {
+          "target": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "startTime": {
             "type": "string",
             "format": "date-time"
           },
-          "end": {
+          "endTime": {
             "type": "string",
             "format": "date-time"
           }
@@ -992,10 +918,6 @@
         "additionalProperties": false
       },
       "User": {
-        "required": [
-          "password",
-          "userName"
-        ],
         "type": "object",
         "properties": {
           "id": {
@@ -1003,58 +925,59 @@
             "format": "int64"
           },
           "userName": {
-            "maxLength": 25,
-            "minLength": 3,
-            "type": "string"
-          },
-          "firstName": {
-            "maxLength": 25,
-            "type": "string",
-            "nullable": true
-          },
-          "lastName": {
-            "maxLength": 25,
             "type": "string",
             "nullable": true
           },
           "password": {
-            "type": "string"
+            "type": "string",
+            "nullable": true
           },
           "salt": {
             "type": "string",
             "format": "byte",
             "nullable": true
           },
-          "isAdmin": {
-            "type": "boolean",
-            "default": false
+          "firstName": {
+            "type": "string",
+            "nullable": true
+          },
+          "lastName": {
+            "type": "string",
+            "nullable": true
+          },
+          "joinDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "loginDate": {
+            "type": "string",
+            "format": "date-time"
           }
         },
         "additionalProperties": false
       },
       "UserDTO": {
-        "required": [
-          "userName"
-        ],
         "type": "object",
         "properties": {
           "userName": {
-            "maxLength": 25,
-            "minLength": 3,
-            "type": "string"
+            "type": "string",
+            "nullable": true
           },
           "firstName": {
-            "maxLength": 25,
             "type": "string",
             "nullable": true
           },
           "lastName": {
-            "maxLength": 25,
             "type": "string",
             "nullable": true
           },
-          "isAdmin": {
-            "type": "boolean"
+          "joinDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "loginDate": {
+            "type": "string",
+            "format": "date-time"
           }
         },
         "additionalProperties": false
